--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,7 @@
 	- For wording and consistency, please note https://osmand.net/help-online?id=technical-articles#Creating_a_Consistent_User_Experience
 	Thx - Hardy
 -->
+    <string name="powered_by_osmand">Powered by OsmAnd</string>
     <string name="osm_live_plan_pricing">Plan &amp; Pricing</string>
     <string name="osm_live_payment_monthly_title">Pay monthly</string>
     <string name="osm_live_payment_3_months_title">Pay once in 3 months</string>
