--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,7 @@
 	- For wording and consistency, please note https://osmand.net/help-online?id=technical-articles#Creating_a_Consistent_User_Experience
 	Thx - Hardy
 -->
+    <string name="route_way">Way:</string>
     <string name="points_of_interests">Points of interests(POI)</string>
     <string name="waiting_for_route_calculation">Waiting for route calculation</string>
     <string name="app_mode_public_transport">Public transport</string>
@@ -20,7 +21,6 @@
     <string name="voice_announcements">Voice announcements</string>
     <string name="intermediate_destinations">Intermediate destinations: %1$s</string>
     <string name="arrive_at_time">Arrive at %1$s</string>
-    <string name="sound_is">Sound is: %1$s</string>
     <string name="osm_live_subscriptions">Subscriptions</string>
     <string name="powered_by_osmand">Powered by OsmAnd</string>
     <string name="osm_live_plan_pricing">Plan &amp; Pricing</string>
