--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,7 +10,8 @@
 	- For wording and consistency, please note https://osmand.net/help-online?id=technical-articles#Creating_a_Consistent_User_Experience
 	Thx - Hardy
 -->
-    <string name="route_way">Way:</string>
+    <string name="on_foot">on foot: %1$s</string>
+    <string name="route_way">Way: %1$s</string>
     <string name="points_of_interests">Points of interests(POI)</string>
     <string name="waiting_for_route_calculation">Waiting for route calculation</string>
     <string name="app_mode_public_transport">Public transport</string>
