--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,8 @@
 	- For wording and consistency, please note https://osmand.net/help-online?id=technical-articles#Creating_a_Consistent_User_Experience
 	Thx - Hardy
 -->
+    <string name="intermediate_waypoint">Intermediate point: %1$s</string>
+    <string name="waypoints">Waypoints: %1$s</string>
     <string name="transfers">transfers: %1$s</string>
     <string name="on_foot">on foot: %1$s</string>
     <string name="route_way">Way: %1$s</string>
