--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,10 @@
 	- For wording and consistency, please note https://osmand.net/help-online?id=technical-articles#Creating_a_Consistent_User_Experience
 	Thx - Hardy
 -->
+    <string name="swap_start_and_destination">Swap start and destination</string>
+    <string name="add_destination_point">Add destination</string>
+    <string name="add_intermediate_point">Add intermediate</string>
+    <string name="add_start_point">Add Start point</string>
     <string name="intermediate_waypoint">Intermediate point: %1$s</string>
     <string name="waypoints">Waypoints: %1$s</string>
     <string name="transfers">transfers: %1$s</string>
