--- a/AUTHORS
+++ b/AUTHORS
@@ -1,15 +1,5 @@
-Copyright © OsmAnd 2010–2014
 ### Credits to all major contributors/developers:
- * Victor Shcherb – all parts of the project, originator
- * Pavol Zibrita – first contributor and developer of some utilities
- * Dusan Kazik – one of the first contributors
- * Andre Van Atten – project supporter, active forum participant, one of the first users.
- * Dr. Hardy Mueller – map appearance concept and base renderers, international consistency and testing, usability, app scoping, concepts, documentation, wiki, market research.
- * Yvecai – main contributor to Contour Lines and Hillshade maps
- * Alexey Pelykh – C++ developer, created native library and made application much snappier.
- * Max (Zahnstocher) – Java contributor, active forum participant.
- * Harry van der Wolf – contributor to country boundaries, configuration files, address files, and much else; active forum participant.
- * Robin ‘ypid’ Schneider – opening hours contributor
+Major contributors /developers listed here https://github.com/osmandapp/osmandapp.github.io/blob/master/website/help/about.html#L8
 
 ### Other Pull requests
 Copyright © All authors of translations and pull requests could be found in commits history:
