--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -1511,6 +1511,7 @@
     <string name="lang_uk">Ukrainian</string>
     <string name="lang_vi">Vietnamese</string>
     <string name="lang_cy">Welsh</string>
+    <string name="lang_gn_py">Guaraní</string>
     <string name="index_name_canada">North America - Canada</string>
     <string name="index_name_italy">Europe - Italy</string>
     <string name="index_name_gb">Europe - Great Britain</string>
