--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -2423,6 +2423,8 @@
     <string name="km">km</string>
     <string name="km_h">km/h</string>
     <string name="m">m</string>
+    <string name="cubic_m">m³</string>
+    <string name ="capacity">capacity</string>
     <string name="old_map_index_is_not_supported">Deprecated map data format \'\'{0}\'\', not supported</string>
     <string name="poi_filter_closest_poi">Nearest POIs</string>
     <string name="poi_filter_custom_filter">Custom filter</string>
