--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -2424,7 +2424,11 @@
     <string name="km_h">km/h</string>
     <string name="m">m</string>
     <string name="cubic_m">m³</string>
-    <string name ="capacity">capacity</string>
+    <string name="metric_ton">t</string>
+    <string name ="capacity">Сapacity</string>
+    <string name="width_label">Width</string>
+    <string name="height_label">Height</string>
+    <string name="distance_label">Distance</string>
     <string name="old_map_index_is_not_supported">Deprecated map data format \'\'{0}\'\', not supported</string>
     <string name="poi_filter_closest_poi">Nearest POIs</string>
     <string name="poi_filter_custom_filter">Custom filter</string>
